--- a/pipelines/pipelines.ipynb
+++ b/pipelines/pipelines.ipynb
@@ -463,8 +463,20 @@
     "\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
+    "    \n",
+    "    def crop_center(self, img):\n",
+    "        # Calculate dimensions for cropping a square region from the center of the image\n",
+    "        min_dim = min(img.shape[:2])\n",
+    "        start_x = (img.shape[0] - min_dim) // 2\n",
+    "        start_y = (img.shape[1] - min_dim) // 2\n",
+    "        end_x = start_x + min_dim\n",
+    "        end_y = start_y + min_dim\n",
+    "        # Crop the square region\n",
+    "        cropped_img = img[start_x:end_x, start_y:end_y]\n",
+    "        return cropped_img\n",
     "\n",
     "    def transform(self, X, y=None):\n",
+    "        X = [self.crop_center(image) for image in X]\n",
     "        X = [resize(image, (max(image.shape), max(image.shape))) for image in X]\n",
     "        X = [color.rgb2gray(image) for image in X]\n",
     "        X = [img_as_ubyte(image) for image in X]\n",
